--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,4 @@
-spring.data.mongodb.uri: mongodb+srv://<username>:<password>@gcp01.uokpo.gcp.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+spring:
+  data:
+    mongodb:
+      uri: mongodb+srv://sunjin:7849@gcp01.uokpo.gcp.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
