--- a/src/main/front/package.json
+++ b/src/main/front/package.json
@@ -1,59 +1,55 @@
 {
   "private": true,
   "scripts": {
-    "build": "vite-ssg build",
+    "build": "cross-env NODE_ENV=production vite-ssg build",
     "dev": "vite --port 3333 --open",
     "lint": "eslint \"**/*.{vue,ts,js}\"",
+    "test": "cypress open",
     "preview": "vite preview",
     "preview-https": "serve dist",
-    "test": "vitest",
-    "test:e2e": "cypress open",
-    "test:unit": "vitest",
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
-    "@vueuse/core": "^7.4.1",
-    "@vueuse/head": "^0.7.4",
+    "@vueuse/core": "^6.7.3",
+    "@vueuse/head": "^0.6.0",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.9",
+    "pinia": "^2.0.0-rc.14",
     "prism-theme-vars": "^0.2.2",
-    "vue": "^3.2.26",
-    "vue-demi": "^0.12.1",
+    "vue": "^3.2.20",
+    "vue-demi": "^0.11.4",
     "vue-i18n": "^9.1.9",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.14.0",
-    "@iconify-json/carbon": "^1.0.12",
-    "@intlify/vite-plugin-vue-i18n": "^3.2.1",
+    "@antfu/eslint-config": "^0.8.2",
+    "@iconify-json/carbon": "^1.0.7",
+    "@intlify/vite-plugin-vue-i18n": "^2.4.0",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/nprogress": "^0.2.0",
-    "@vitejs/plugin-vue": "^2.0.1",
-    "@vue/compiler-sfc": "^3.2.26",
-    "@vue/server-renderer": "^3.2.26",
-    "@vue/test-utils": "^2.0.0-rc.18",
-    "critters": "^0.0.15",
+    "@vitejs/plugin-vue": "^1.9.3",
+    "@vue/compiler-sfc": "^3.2.20",
+    "@vue/server-renderer": "^3.2.20",
+    "critters": "^0.0.10",
     "cross-env": "^7.0.3",
-    "cypress": "^9.1.1",
-    "eslint": "^8.5.0",
+    "cypress": "^8.7.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-cypress": "^2.12.1",
     "https-localhost": "^4.7.0",
-    "markdown-it-link-attributes": "^4.0.0",
+    "markdown-it-link-attributes": "^3.0.0",
     "markdown-it-prism": "^2.2.1",
-    "pnpm": "^6.24.3",
-    "typescript": "^4.5.4",
-    "unplugin-auto-import": "^0.5.4",
-    "unplugin-icons": "^0.13.0",
-    "unplugin-vue-components": "^0.17.11",
-    "vite": "^2.7.6",
-    "vite-plugin-inspect": "^0.3.11",
-    "vite-plugin-md": "^0.11.7",
-    "vite-plugin-pages": "^0.19.7",
-    "vite-plugin-pwa": "^0.11.12",
-    "vite-plugin-vue-layouts": "^0.5.0",
-    "vite-plugin-windicss": "^1.6.1",
-    "vite-ssg": "^0.17.2",
-    "vitest": "^0.0.113",
-    "vue-tsc": "^0.30.0"
+    "pnpm": "^6.19.0",
+    "typescript": "^4.4.4",
+    "unplugin-auto-import": "^0.4.13",
+    "unplugin-icons": "^0.12.16",
+    "unplugin-vue-components": "^0.15.6",
+    "vite": "^2.6.10",
+    "vite-plugin-inspect": "^0.3.9",
+    "vite-plugin-md": "^0.11.2",
+    "vite-plugin-pages": "^0.18.1",
+    "vite-plugin-pwa": "^0.11.3",
+    "vite-plugin-vue-layouts": "^0.4.1",
+    "vite-plugin-windicss": "^1.4.12",
+    "vite-ssg": "^0.15.5",
+    "vue-tsc": "^0.3.0"
   }
 }
