--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://sunjin:7849@gcp01.uokpo.gcp.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+      uri: mongodb+srv://{username}:{password}@gcp01.uokpo.gcp.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
   security:
     user:
       name: admin
