--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,4 @@
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://<user>:<password>@gcp01.uokpo.gcp.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
-  security:
-    user:
-      name: admin
-      password: 1234
-server:
-  port: 7849
+      uri: mongodb+srv://<user>:<password>@gcp01.uokpo.gcp.mongodb.net/LOLpago?retryWrites=true&w=majority
