Change Server Port

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://<user>:<password>@gcp01.uokpo.gcp.mongodb.net/LOLpago?retryWrites=true&w=majority
+      uri: mongodb+srv://<name>:<pw>@gcp01.uokpo.gcp.mongodb.net/LOLpago?retryWrites=true&w=majority
+server:
+  port: 7849
